--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@mui/material": "^5.0.3",
     "axios": "^0.22.0",
+    "prop-types": "^15.7.2",
     "react-router-dom": "^5.3.0"
   }
 }
